4-9-22 [10:08 AM] Added Many Things

--- a/src/main/resources/assets/shadowmod/lang/en_us.json
+++ b/src/main/resources/assets/shadowmod/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.shadowmod.shadow_ingot": "§7Shadow Ingot",
   "item.shadowmod.shadow_sword": "§7Shadow Sword",
   "item.shadowmod.shadow_pickaxe": "§7Shadow Pickaxe",
+  "item.shadowmod.teleport_sword": "§3Teleport Sword",
+  "item.shadowmod.feather_boots": "Feather Boots",
 
   "_comment2": "Block Section",
   "block.shadowmod.shadow_ore": "§7Shadow Ore",
